crates/ploke-tui/tests/snapshots/ui_model_browser_snapshot__model_browser_initial_loading.snap
---
source: crates/ploke-tui/tests/ui_model_browser_snapshot.rs
expression: text
---
Model Browser — 0 results for "qwen"
Instructions: ↑/↓ or j/k to navigate, Enter/Space to expand, l to choose provider (Enter to apply), s to auto-select, ? for help, q/Esc to close.

Loading models…
